[package]
name = "frozen"
version = "0.1.0"
authors = ["LavaPower <lavapower84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window="0.107.0"
piston2d-sprite = "0.59.0"
gfx_device_gl="0.16.2"
piston-gfx_texture = "0.41.0"
json = "0.12.1"
glob = "0.3.0"